<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_back"
        android:layout_width="156dp"
        android:layout_height="37dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_info"
        app:layout_constraintEnd_toStartOf="@+id/btn_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_back"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/image_back"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="Regresar"
            android:textColor="#7800FD"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/keyboard_backspace" />

    </RelativeLayout>

    <EditText
        android:id="@+id/txt_city"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__city_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_lastname"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__lastname_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__email_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lastname"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__name_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_document"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_document"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__document_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_document_type"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_document_type"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__document_type_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addphoto"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_archive"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sendD__archive_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_city"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="Envío de documentación"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu" />

    <ImageButton
        android:id="@+id/btn_addphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="333dp"
        app:layout_constraintBottom_toTopOf="@+id/rl_send_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info"
        app:srcCompat="@drawable/add_a_photo"
        tools:ignore="SpeakableTextPresentCheck" />

    <RelativeLayout
        android:id="@+id/rl_send_info"
        android:layout_width="156dp"
        android:layout_height="37dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_send"
        app:layout_constraintBottom_toTopOf="@+id/rl_btnsend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_archive">

        <TextView
            android:id="@+id/text_send_doc"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/image_backup"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="start|center"
            android:text="Documento"
            android:textColor="#FFFFFF "
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_backup"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/backup" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btnsend"
        android:layout_width="329dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_send"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_send_info">

        <TextView
            android:id="@+id/text_btnsend"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="Enviar"
            android:textColor="#FFFFFF "
            android:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>