<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image_sophos"
        android:layout_width="208dp"
        android:layout_height="76dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="431dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@drawable/image6" />

    <TextView
        android:id="@+id/meh"
        android:layout_width="296dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_horizontal"
        android:text="@string/meh"
        android:textAppearance="@style/meh"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/title_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_sophos" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/login__email_hint"
        app:layout_constraintBottom_toTopOf="@+id/title_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_username"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_login"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="49dp"
        android:hint="@string/login__password_hint"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_username"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_login"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_login"
        android:text="Ingresar"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout_finger_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_password" />

    <RelativeLayout
        android:id="@+id/relativeLayout_finger_login"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/border_login"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <ImageView
            android:id="@+id/image_finger"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@id/image_finger"
            app:srcCompat="@drawable/fingerprint"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="569dp" />

        <Button
            android:id="@+id/btn_finger_login"
            android:layout_width="249dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="11dp"
            android:layout_toRightOf="@id/image_finger"
            android:backgroundTint="#FFFFFF"
            android:text="Ingresar con huella"
            android:textColor="#7800FD"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="546dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>